<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MoneyTrackR</string>

    <string name="default_currency">USD</string>
    <string name="prefs_current_currency_key">prefs_current_currency_key</string>
    <string name="prefs_source_currency_key">prefs_source_currency_key</string>
    <string name="prefs_is_first_run_done">prefs_is_first_run_done</string>
    <string name="prefs_export_data_to_csv">prefs_export_data_csv_key</string>
    <string name="prefs_import_data_from_csv">prefs_import_data_from_csv_key</string>
    <string name="permission_explanation_dialog_title">Permission needed</string>
    <string name="permission_explanation_message">CSV files can only be opened from (or written to) your phone, if you allow us to use your phone\'s storage.</string>
    <string name="permission_explanation_button">Okay</string>
    <string name="permission_needed">Permission denied, please go to options menu to grant access for the app.</string>
    <string name="prefs_time_interval">prefs_time_interval_key</string>
    <string name="default_time_interval_month">current_month</string>
    <string name="time_interval_year">current_year</string>
    <string name="time_interval_day">current_day</string>
    <string name="time_interval_custom">custom_interval</string>
    <string name="custom_interval_start_year">interval_start_year</string>
    <string name="custom_interval_start_month">interval_start_month</string>
    <string name="custom_interval_start_day">interval_start_day</string>
    <string name="custom_interval_end_year">interval_end_year</string>
    <string name="custom_interval_end_month">interval_end_month</string>
    <string name="custom_interval_end_day">interval_end_day</string>
    <string name="incomes_title">Incomes</string>
    <string name="spendings_title">Spendings</string>
    <string name="balance_title">Balance</string>
    <string name="add_spending_title">Add a spending</string>
    <string name="add_edit_spendings_edit_text_hint">Spending\'s value</string>
    <string name="add_edit_note_edit_text_hint">Comment</string>
    <string name="add_edit_button_choose_category">Choose a category</string>
    <string name="content_description_category_icon"><xliff:g name="category_name">%1$s</xliff:g> category icon.</string>
    <string name="edit_spendings_title">Edit spending</string>
    <string name="add_edit_button_change_category">Change category</string>
    <string name="add_edit_button_save_to_category">Save to <xliff:g name="category_name">%1$s</xliff:g> category</string>
    <string name="add_edit_incomes_edit_text_hint">Income\'s value</string>
    <string name="edit_incomes_title">Edit income</string>
    <string name="add_income_title">Add an income</string>
    <string name="add_edit_button_add_income">Add to incomes</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="add_edit_save_successful">Saved successfully</string>
    <string name="add_edit_save_delete_error">Zero or more than 1 row was affected</string>
    <string name="add_edit_delete_successful">Deleted entry</string>
    <string name="category_chooser_entry_updated">Entry updated</string>
    <string name="category_bills">Bills</string>
    <string name="category_car">Car</string>
    <string name="category_clothes">Clothes</string>
    <string name="category_comms">Communications</string>
    <string name="category_eating_out">Eating out</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_food">Food</string>
    <string name="category_gifts">Gifts</string>
    <string name="category_health">Health</string>
    <string name="category_house">House</string>
    <string name="category_office">Office</string>
    <string name="category_pets">Pets</string>
    <string name="category_sports">Sports</string>
    <string name="category_taxi">Taxi</string>
    <string name="category_toiletry">Toiletry</string>
    <string name="category_transport">Transport</string>
    <string name="fab_spending">Add a new spending entry</string>
    <string name="fab_income">Add a new income entry</string>
    <string name="fab_open">Open new entry menu</string>
    <string name="fab_close">Close new entry menu</string>
    <string name="empty_list">This list is currently empty.</string>
    <string name="loading_dialog_title">Loading</string>
    <string name="loading_dialog_message">Please wait...</string>
    <string name="message_currency_changed_successfuly">Currency changed successfully</string>
    <string name="message_currency_change_error">Currency not changed, please try again later</string>
    <string name="export_data_success">Exporting data finished.</string>
    <string name="export_data_failed">Failed to export data.</string>
    <string name="import_data_success">Importing data finished.</string>
    <string name="import_data_failed">Failed to import data.</string>
    <string name="no_network_dialog_title">No network</string>
    <string name="no_network_dialog_message">For changing currency, we get informations from a remote server. Because currently no network is available, we cannot change the currency. Please check you wifi or mobile internet settings!</string>
    <string name="no_network_dialog_positive">Open settings</string>
    <string name="add_edit_not_a_number_error">The value must be a number!</string>
    <string name="add_edit_number_field_required">This field is required!</string>

    <string-array name="currencies">
        <item>EUR</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>NZD</item>
        <item>USD</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>JPY</item>
        <item>HUF</item>
    </string-array>

    <string-array name="currencies_names">
        <item>Euro (EUR)</item>
        <item>Pound Sterling (GBP)</item>
        <item>Australian dollar (AUD)</item>
        <item>New Zeland dollar (NZD)</item>
        <item>United States dollar (USD)</item>
        <item>Canadian dollar (CAD)</item>
        <item>Swiss franc (CHF)</item>
        <item>Japanese yen (JPY)</item>
        <item>Hungarian forint (HUF)</item>
    </string-array>

    <string-array name="time_intervals">
        <item>@string/time_interval_day</item>
        <item>@string/default_time_interval_month</item>
        <item>@string/time_interval_year</item>
        <item>@string/time_interval_custom</item>
    </string-array>

    <string-array name="time_intervals_names">
        <item>Current Day</item>
        <item>Current Month</item>
        <item>Current Year</item>
        <item>Custom Interval</item>
    </string-array>
</resources>
