<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
    <Preference
        android:key="@string/prefs_time_interval"
        android:title="Time interval"/>
    <ListPreference
        android:defaultValue="@string/default_currency"
        android:entries="@array/currencies_names"
        android:entryValues="@array/currencies"
        android:key="@string/prefs_current_currency_key"
        android:title="Change currency"/>
    <Preference
        android:key="@string/prefs_import_data_from_csv"
        android:title="Import data"/>
    <Preference
        android:key="@string/prefs_export_data_to_csv"
        android:title="Export data"/>
</PreferenceScreen>