<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/widget"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="@drawable/widget_touch_selector"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incomes_title"/>

    <TextView
        android:id="@+id/tv_incomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_toolbar_element_margin_bottom"
        android:textColor="@color/income_color"
        android:textSize="@dimen/toolbar_value_text_size"
        tools:text="555.55"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spendings_title"/>

    <TextView
        android:id="@+id/tv_spendings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_toolbar_element_margin_bottom"
        android:textColor="@color/spendings_color"
        android:textSize="@dimen/toolbar_value_text_size"
        tools:text="555.55"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_title"/>

    <TextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/balance_color"
        android:textSize="@dimen/toolbar_value_text_size"
        tools:text="555.55"/>

</LinearLayout>